--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,6 +34,7 @@ subjects:
 - !lcsh 'Fairy tales -- China'
 - !lcc 'GR'
 - !lcsh 'Tales -- China'
+- GITenberg
 tableOfContents: The golden beetle, or, Why the dog hates the cat -- The great bell
   -- The strange tale of Doctor Dog -- How footbinding started -- The talking fish
   -- Bamboo and the turtle -- The mad goose and the tiger forest -- The nodding tiger
